# jassist-assist

./: .gitignore  pyproject.toml  requirements.txt
jassist/agenda/: README.md  __init__.py  agenda_cli.py  agenda_processor.py  google_agenda.py
jassist/api_assistants_cliente/: README.md  __init__.py  api_assistants_cliente.py  api_assistants_cliente_cli.py  config_manager.py  exceptions.py
jassist/classification/: README.md  __init__.py  classification_cli.py  classification_processor.py
jassist/contactos/: __init__.py  contactos_cli.py  contactos_processor.py
jassist/contas/: __init__.py  contas_cli.py  contas_processor.py
jassist/db_utils/: __init__.py  db_connection.py  db_diagnostics.py  db_env_utils.py  db_manager.py  db_schema.py  setup_database.py
jassist/diario/: __init__.py  diario_cli.py  diario_processor.py
jassist/download_gdrive/: README.md  __main__.py  config_loader.py  download_gdrive_cli.py  gdrive_downloader.py  gdrive_utils.py
jassist/downloaded/: 20250425_091603_949178_Rua Diogo Domingos Alves 2.m4a  20250425_091604_877982_Rua Diogo Domingos Alves.m4a
jassist/entidades/: __init__.py  entidades_cli.py  entidades_processor.py
jassist/google_auth/: __main__.py  auth_manager.py
jassist/logger_utils/: logger_utils.py
jassist/pipeline/: __init__.py  __main__.py  pipeline.py
jassist/router/: __init__.py  __main__.py  router_cli.py
jassist/scheduler/: __init__.py  pipeline_state.json  scheduler.py
jassist/system/: agenda_flow.md  classification_flow.md  db_utils_flow.md  gdrive_download_flow.md  transcribe_flow.md
(+66 files in other folders)
